--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,7 @@ pluggy==0.13.1
 py==1.9.0
 pyparsing==2.4.7
 pytest==5.4.3
+pytest-expect==1.1.0
 six==1.15.0
+u-msgpack-python==2.6.0
 wcwidth==0.2.5
